Wed Jan 29 04:01:36 GMT 2014  Olly Betts <olly@survex.com>

	* python3/Makefile.am,python3/run-python-test: Pass Python 3
	  interpreter as PYTHON3 not PYTHON, and default to python3 if not
	  specified.

Fri Jan 10 09:00:05 GMT 2014  Olly Betts <olly@survex.com>

	* xapian-headers.i: Update for xapian-core Database::check() optional
	  parameter change.

Thu Jan 09 03:34:17 GMT 2014  Olly Betts <olly@survex.com>

	* python/pythontest.py,python3/pythontest.py,xapian-head.i,
	  xapian-headers.i: Wrap Xapian::Database::check() for the bindings
	  with arguments (path, opts = 0), and if opts != 0, send output to
	  stdout.

Mon Jan 06 12:10:08 GMT 2014  Olly Betts <olly@survex.com>

	* python/pythontest.py,python3/pythontest.py: When testing
	  valuestreams, just use the xapian.WritableDatabase constructor
	  rather than chert_open() - that code dates back to when chert was
	  the only disk-based backend to support valuestreams, and it wasn't
	  the default backend.

Wed Jan 01 04:22:36 GMT 2014  Olly Betts <olly@survex.com>

	* python3/Makefile.am: Fix handling of DOCUMENTATION_RULES.

Wed Dec 25 20:30:49 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Quote $PYTHON, etc in backward compatibility code.

Wed Dec 25 06:29:07 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Fix some issues with the previous change, so it works
	  as intended.

Tue Dec 24 21:26:27 GMT 2013  Olly Betts <olly@survex.com>

	* python3/Makefile.am: Use PYTHON to run doxy2swig, as that's reliably
	  set when we're in maintainer mode.

Tue Dec 24 21:21:17 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,python/Makefile.am: Rename the variables
	  used for the python2 bindings to begin PYTHON2 instead of PYTHON.
	  Try python2 before python when looking for an interpreter for the
	  python2 bindings, as some distros now point /usr/bin/python at
	  Python 3.

Sat Dec 21 01:06:19 GMT 2013  Olly Betts <olly@survex.com>
